working code commit

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -15,24 +15,24 @@
 
 <body>
 
-    <div class="container">
-        <div class="jumbotron">
+    <div class="bg-dark container">
+        <div class="bg-info jumbotron">
             <div class="container">
                 <h1 style="font-size: 65px">
-                    <i class="fab fa-facebook"></i> Friend Finder</h1>
-                <hr>
-                <h3>Answer a few basic questions.</h3>
-                <h3>Then find the friend with the greatest compatibility!</h3>
+                    <i class="fab fa-instagram "></i> Disney's Social-Network</h1>
+                <hr class="bg-dark">
+                <h3 class="text-danger">Find Your New Friends Here!</h3>
+                <h3 class="text-warning">Welcome to the exclusive new Friend Finder based in Disneyland. Answer few questions and get to know your match with your new Friend! </h3>
                 <br>
-                <a href="/survey" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">
+                <a href="/survey" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">
                     <i class="far fa-list-alt"></i> Go to Survey</a>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <a href="/api/friends">API Friends List</a> |
-        <a href='https://github.com/llanoreinaldo/Friend-Finder'>GitHub Repo </a>
+    <div class="container text-center">
+        <a class="text-dark" href="/api/friends">API Friends List</a> |
+        <a class="text-dark" href='https://github.com/docvvk/FriendFinder'>GitHub Repo </a>
     </div>
 
     <br>
