--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="bg-info container">
         <br>
-        <h1>Survey Questions</h1>
+        <h1 class="text-center">Survey Questions</h1>
         <hr>
         <h3><strong>About You</strong></h3>
         <h5>Name (Required)</h5>
@@ -150,15 +150,15 @@
         <br>
         <br>
         <!-- Submit Button -->
-        <button class="btn btn-primary btn-lg btn-block" type="button" id="submit">
+        <button class="btn btn-dark btn-lg btn-block" type="button" id="submit">
                 <i class="fa fa-check-circle" aria-hidden="true"></i>
                 Submit
         </button>
         <hr>
         <footer class='footer'>
-            <div class="container text-center">
-                <a href="/api/friends">API Friends List</a> |
-                <a href='https://github.com/docvvk/Friend-Finder'>GitHub Repo</a>
+            <div class="container text-center text-dark">
+                <a class="text-dark" href="/api/friends">API Friends List</a> |
+                <a class="text-dark" href='https://github.com/docvvk/Friend-Finder'>GitHub Repo</a>
             </div>
         </footer>
     </div>
@@ -170,7 +170,7 @@
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="mt-1 close" data-dismiss="modal">&times;</button>
                         <h2 class="modal-title">
                             <strong>Best Match</strong>
                         </h2>
