--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -72,7 +72,7 @@
         </select>
 
         <h4><strong>Question 4</strong></h4>
-        <h5>You think that today's education system is perfect for our generation..</h5>
+        <h5>You think that today's education system is perfect for our generation.</h5>
         <select class="chosen-select" id="q4">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -94,7 +94,7 @@
         </select>
 
         <h4><strong>Question 6</strong></h4>
-        <h5>You sometimes wish bad things for some people.</h5>
+        <h5>You sometimes wish bad things for other people.</h5>
         <select class="chosen-select" id="q6">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -105,7 +105,7 @@
         </select>
 
         <h4><strong>Question 7</strong></h4>
-        <h5>You enjoy a good spirited debate about politics.</h5>
+        <h5>You enjoy a good spirited debate about politics!</h5>
         <select class="chosen-select" id="q7">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -116,7 +116,7 @@
         </select>
 
         <h4><strong>Question 8</strong></h4>
-        <h5>You have a bucket list of wishes to complete.</h5>
+        <h5>You have a bucket list of wishes to complete!</h5>
         <select class="chosen-select" id="q8">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -127,7 +127,7 @@
         </select>
 
         <h4><strong>Question 9</strong></h4>
-        <h5>Your fitness goals often fail cecause of your laziness.</h5>
+        <h5>Your fitness goals often fail because of your laziness!</h5>
         <select class="chosen-select" id="q9">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -138,7 +138,7 @@
         </select>
 
         <h4><strong>Question 10</strong></h4>
-        <h5>You are firm believer in some supernatural power running this world.</h5>
+        <h5>You are firm believer in some supernatural power running this universe!</h5>
         <select class="chosen-select" id="q10">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
