--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -38,7 +38,7 @@
 
         <h4><strong>Question 1</strong></h4>
 
-        <h5>You are confident about JavaScript.</h5>
+        <h5>You are confident about JavaScript!</h5>
         <select class="chosen-select" id="q1">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -50,7 +50,7 @@
 
         <h4><strong>Question 2</strong></h4>
 
-        <h5>You are so scared of creepy dark places.</h5>
+        <h5>You are so scared of creepy dark places!</h5>
         <select class="chosen-select" id="q2">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -61,7 +61,7 @@
         </select>
 
         <h4><strong>Question 3</strong></h4>
-        <h5>You would do anything to accomplish your dreams.</h5>
+        <h5>You would do anything to accomplish your dreams!</h5>
         <select class="chosen-select" id="q3">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -72,7 +72,7 @@
         </select>
 
         <h4><strong>Question 4</strong></h4>
-        <h5>You think that today's education system is perfect for our generation.</h5>
+        <h5>You think that today's education system is perfect for our generation!</h5>
         <select class="chosen-select" id="q4">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -83,7 +83,7 @@
         </select>
 
         <h4><strong>Question 5</strong></h4>
-        <h5>You can travel everyday of your life.</h5>
+        <h5>You can travel everyday of your life!</h5>
         <select class="chosen-select" id="q5">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -94,7 +94,7 @@
         </select>
 
         <h4><strong>Question 6</strong></h4>
-        <h5>You sometimes wish bad things for other people.</h5>
+        <h5>You sometimes wish bad things for other people!</h5>
         <select class="chosen-select" id="q6">
             <option value="">Select one Answer</option>
             <option value="1">1 (Strongly Disagree)</option>
