--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -170,7 +170,7 @@
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="mt-1 close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h2 class="modal-title">
                             <strong>Best Match</strong>
                         </h2>
